2007-03-12  Thomas Wood  <thos@gnome.org>

	* NEWS:
	* configure.ac:
	Updated for 2.10.0 release

	* engines/clearlooks/src/clearlooks_draw.c:
	* engines/clearlooks/src/clearlooks_draw_inverted.c:
	Minor tweaks to scrollbar shading from Andrea Cimitan

2007-03-11  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_inset):
	* engines/clearlooks/src/clearlooks_draw_inverted.c:
	(clearlooks_inverted_draw_inset):
	* engines/support/cairo-support.c: (ge_cairo_stroke_rectangle),
	(ge_cairo_simple_border):
	The cairo stroking performance bug has been fixed for a while. So
	removing the workaround again.

2007-03-11  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* configure.ac: Define GETTEXT_PACKAGE.

2007-03-05  Benjamin Berg  <benjamin@sipsolutions.net>

	* configure.ac:
	Use "yes" instead of $defaultval for the schemas option.

2007-03-05  Benjamin Berg  <benjamin@sipsolutions.net>

	* schema/Makefile.am:
	List *.xml.in.in in EXTRA_DIST, so that make dist is also possible
	if an engine is disabled.

	Also removed the ChangeLog from the schema directory.

2007-03-05  Benjamin Berg  <benjamin@sipsolutions.net>

	* themes/Clearlooks/gtk-2.0/gtkrc:

	Remove the "foo" color.

2007-03-04  Thomas Wood  <thos@gnome.org>

	Patch by: Werner Pantke <gnome-color-chooser@punk-ass-bitch.org>

	* .cvsignore:
	* schema/*:
	* Makefile.am:
	* autogen.sh:
	* configure.ac:
	* po/*:

	Patch from Werner Pantke to add xml descriptions of engine options.

2007-03-03  Benjamin Berg  <benjamin@sipsolutions.net>

	* themes/Makefile.am:
	List subdirectories in DIST_SUBDIRS.

2007-03-03  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/animation.c:
	* engines/clearlooks/src/clearlooks_draw.c:
	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	* engines/clearlooks/src/clearlooks_draw_inverted.c:
	* engines/clearlooks/src/clearlooks_style.c:
	* engines/crux/src/crux-draw.c: (draw_box):