@@ -1,3 +1,10 @@
+2007-03-14  Thomas Wood  <thos@gnome.org>
+
+	* engines/clearlooks/src/clearlooks_draw.c:
+	(clearlooks_draw_scrollbar_stepper),
+	(clearlooks_draw_scrollbar_slider):
+	More tweaks to scrollbar shading from Andrea Cimitan
+
 2007-03-12  Thomas Wood  <thos@gnome.org>
 
 	* NEWS:
